Googleサイト認証タグ追加

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>カゲコレ</title>
+<meta name="google-site-verification" content="1q5jrQCKitsrR_hK7hwyP1Ls2ybDdVLFYTtQhegshvQ" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,6 +22,26 @@
 
   <div class="container">
     <nav class="sidebar">
+
+<!-- サイドバーSNSブロック -->
+<h2>SNS</h2>
+<div class="sns-links" style="margin-bottom: 24px;">
+  <div style="display: flex; align-items: center; margin-bottom: 12px;">
+    <a href="https://www.instagram.com/kagecolle" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+      <img src="icon/Instagramicon.png" alt="Instagram" width="24" height="24" style="margin-right: 8px;">
+      <span>使用例など</span>
+    </a>
+  </div>
+  <div style="display: flex; align-items: center;">
+    <a href="https://note.com/kagecolle" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+      <img src="icon/noteicon2.png" alt="note" width="24" height="24" style="margin-right: 8px;">
+      <span>中の人の独り言</span>
+    </a>
+  </div>
+</div>
+
+
+
 
   <!-- 📂 カテゴリフィルター -->
   <h2>カテゴリー</h2>
@@ -69,12 +90,6 @@
           <!-- サムネイルをここに並べる（JSで動的でもOK） -->
         </div>
         <a href="material.html" class="more-link">もっと見る</a>
-      </section>
-
-      <!-- 📸 Instagram埋め込み -->
-      <section id="instagram">
-        <h2>Instagram</h2>
-        <!-- 埋め込み用コードをあとで差し込み -->
       </section>
 
     </main>
@@ -161,10 +176,9 @@
   </div>
 </div>
 
-
-
   <script src="materials.js"></script>
   <script src="script.js"></script>
+
 
 </body>
 </html>
