--- a/terms.html
+++ b/terms.html
@@ -22,6 +22,23 @@
   <div class="container">
     <nav class="sidebar">
 
+      <!-- サイドバーSNSブロック -->
+<h2>SNS</h2>
+<div class="sns-links" style="margin-bottom: 24px;">
+  <div style="display: flex; align-items: center; margin-bottom: 12px;">
+    <a href="https://www.instagram.com/kagecolle" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+      <img src="icon/Instagramicon.png" alt="Instagram" width="24" height="24" style="margin-right: 8px;">
+      <span>使用例など</span>
+    </a>
+  </div>
+  <div style="display: flex; align-items: center;">
+    <a href="https://note.com/kagecolle" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+      <img src="icon/noteicon2.png" alt="note" width="24" height="24" style="margin-right: 8px;">
+      <span>中の人の独り言</span>
+    </a>
+  </div>
+</div>
+
 
   <!-- 📂 カテゴリフィルター -->
   <h2>カテゴリー</h2>
