--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
 
   <header class="global-header">
-  <h1 class="logo">カゲコレ</h1>
+   <a href="index.html">
+    <img src="icon/logo.svg" alt="カゲコレ ロゴ" class="site-logo">
+  </a>
   <nav>
     <ul class="nav-links">
-      <li><a href="index.html">トップ</a></li>
       <li><a href="about.html">カゲコレとは</a></li>
       <li><a href="terms.html">利用規約</a></li>
       <li><a href="material.html">素材一覧</a></li>
+      <li><a href="favorites.html">お気に入り</a></li>
     </ul>
   </nav>
 </header>
@@ -76,9 +78,11 @@
       </section>
 
       <section id="favorites">
+          <div class="section">
         <h2>お気に入り素材</h2>
         <div id="favorites-list"></div>
         <a href="favorites.html" class="more-link">もっと見る</a>
+        </div>
       </section>
 
 
