--- a/favorites.html
+++ b/favorites.html
@@ -2,47 +2,86 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>カゲコレ - お気に入り素材</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>カゲコレ</title>
+  <meta name="google-site-verification" content="1q5jrQCKitsrR_hK7hwyP1Ls2ybDdVLFYTtQhegshvQ">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header class="global-header">
    <a href="index.html">
     <img src="icon/logo.svg" alt="カゲコレ ロゴ" class="site-logo">
   </a>
   <nav>
-      <ul class="nav-links">
-        <li><a href="about.html">カゲコレとは</a></li>
+    <button id="menu-toggle" class="menu-toggle"></button>
+    <ul class="nav-links">
+      <li><a href="about.html">カゲコレとは</a></li>
       <li><a href="terms.html">利用規約</a></li>
       <li><a href="material.html">素材一覧</a></li>
       <li><a href="favorites.html">お気に入り</a></li>
     </ul>
-    </nav>
-  </header>
+  </nav>
+</header>
 
   <div class="container">
     <nav class="sidebar">
-      <h2>カテゴリー</h2>
-      <div id="tag-filters">
-        <a class="tag-btn" href="material.html?tag=ビジネス">ビジネス</a>
-        <a class="tag-btn" href="material.html?tag=スポーツ">スポーツ</a>
-        <a class="tag-btn" href="material.html?tag=音楽">音楽</a>
-        <a class="tag-btn" href="material.html?tag=エフェクト">エフェクト</a>
-        <a class="tag-btn" href="material.html?tag=男性">男性</a>
-        <a class="tag-btn" href="material.html?tag=女性">女性</a>
-        <a class="tag-btn" href="material.html?tag=男の子">男の子</a>
-        <a class="tag-btn" href="material.html?tag=女の子">女の子</a>
-        <a class="tag-btn" href="material.html?tag=複数人">複数人</a>
-        <a class="tag-btn" href="material.html?tag=アイテム">アイテム</a>
-        <a class="tag-btn" href="material.html?tag=ALL">すべて表示</a>
-      </div>
-    </nav>
+
+   <!-- ▼ ここがナビエリア（新規追加） -->
+<div class="sidebar-top">
+    <ul>
+      <li><a href="about.html">カゲコレとは</a></li>
+      <li><a href="terms.html">利用規約</a></li>
+      <li><a href="material.html">素材一覧</a></li>
+      <li><a href="favorites.html">お気に入り</a></li>
+    </ul>
+  </div>
+
+<!-- サイドバーSNSブロック -->
+<h2>SNS</h2>
+<div class="sns-links" style="margin-bottom: 24px;">
+  <div style="display: flex; align-items: center; margin-bottom: 12px;">
+    <a href="https://www.instagram.com/kagecolle" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+      <img src="icon/Instagramicon.png" alt="Instagram" width="24" height="24" style="margin-right: 8px;">
+      <span>使用例など</span>
+    </a>
+  </div>
+  <div style="display: flex; align-items: center;">
+    <a href="https://note.com/kagecolle" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+      <img src="icon/noteicon2.png" alt="note" width="24" height="24" style="margin-right: 8px;">
+      <span>中の人の独り言</span>
+    </a>
+  </div>
+</div>
+
+
+
+
+  <!-- 📂 カテゴリフィルター -->
+  <h2>カテゴリー</h2>
+<div id="tag-filters">
+  <a class="tag-btn" href="material.html?tag=ビジネス">ビジネス</a>
+  <a class="tag-btn" href="material.html?tag=スポーツ">スポーツ</a>
+  <a class="tag-btn" href="material.html?tag=音楽">音楽</a>
+  <a class="tag-btn" href="material.html?tag=エフェクト">エフェクト</a>
+  <a class="tag-btn" href="material.html?tag=男性">男性</a>
+  <a class="tag-btn" href="material.html?tag=女性">女性</a>
+   <a class="tag-btn" href="material.html?tag=男の子">男の子</a>
+  <a class="tag-btn" href="material.html?tag=女の子">女の子</a>
+  <a class="tag-btn" href="material.html?tag=複数人">複数人</a>
+     <a class="tag-btn" href="material.html?tag=アイテム">アイテム</a>
+  <a class="tag-btn" href="material.html?tag=ALL">すべて表示</a>
+</div>
+</nav>
+
 
     <main class="main-content">
-      <div class="search-box">
-        <input type="text" id="searchInput" placeholder="キーワードで検索">
-        <button id="searchBtn">検索</button>
-      </div>
+
+      <!-- 🔍 検索フォーム -->
+     <div class="search-box">
+  <input type="text" id="searchInput" placeholder="キーワードで検索">
+  <button id="searchBtn">検索</button>
+</div>
 
       <section id="favorites-page-list">
         <h2>お気に入り素材 一覧</h2>
