--- a/material.html
+++ b/material.html
@@ -2,18 +2,21 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>カゲコレ</title>
+  <meta name="google-site-verification" content="1q5jrQCKitsrR_hK7hwyP1Ls2ybDdVLFYTtQhegshvQ">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
- <header class="global-header">
+  <header class="global-header">
    <a href="index.html">
     <img src="icon/logo.svg" alt="カゲコレ ロゴ" class="site-logo">
   </a>
   <nav>
+    <button id="menu-toggle" class="menu-toggle"></button>
     <ul class="nav-links">
-     <li><a href="about.html">カゲコレとは</a></li>
+      <li><a href="about.html">カゲコレとは</a></li>
       <li><a href="terms.html">利用規約</a></li>
       <li><a href="material.html">素材一覧</a></li>
       <li><a href="favorites.html">お気に入り</a></li>
@@ -21,8 +24,18 @@
   </nav>
 </header>
 
-<div class="container">
-  <nav class="sidebar">
+  <div class="container">
+    <nav class="sidebar">
+
+  <!-- ▼ ここがナビエリア（新規追加） -->
+<div class="sidebar-top">
+    <ul>
+      <li><a href="about.html">カゲコレとは</a></li>
+      <li><a href="terms.html">利用規約</a></li>
+      <li><a href="material.html">素材一覧</a></li>
+      <li><a href="favorites.html">お気に入り</a></li>
+    </ul>
+  </div>
 
 <!-- サイドバーSNSブロック -->
 <h2>SNS</h2>
@@ -70,11 +83,11 @@
       <!-- JSで素材を自動生成して並べる -->
     </section>
      <section id="favorites">
-          <div class="section-container">
+  
         <h2>お気に入り素材</h2>
         <div id="favorites-list"></div>
         <a href="favorites.html" class="more-link">もっと見る</a>
-        </div>
+    
       </section>
   </main>
 </div>
@@ -82,89 +95,90 @@
    
 
 
-
-
 <!-- モーダル本体 -->
-<div id="modal" class="modal" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9999;">
+<div id="modal" class="modal" style="display:none;">
   <div class="modal-inner">
-    
-   <!-- モーダルヘッダー（タイトル）を .modal-inner の中に最初に置く -->
+
+    <!-- 上部：タイトルと閉じる -->
     <div class="modal-header">
-      <h2 id="modalTitle" class="modal-title">素材タイトル</h2>
+       <h2 id="modalTitle" class="modal-title">素材タイトル</h2>
+      <button id="modal-close" class="modal-close">閉じる</button>
     </div>
 
-    <!-- 中身は左右分割 -->
-
+    <!-- 中央：画像と操作パネル -->
     <div class="modal-content-flex">
-      <!-- 左：プレビュー -->
+
+      <!-- 左：画像プレビュー -->
       <div class="modal-preview" id="modal-content"></div>
 
-      <!-- 右：カラーと操作 -->
+      <!-- 右：操作エリア -->
       <div class="modal-controls">
+
+        <!-- カラーピッカー -->
         <div class="modal-tools">
           <label for="colorPicker">色を選ぶ：</label>
-          <input type="color" id="colorPicker" value="#000000">
-          <input type="text" id="colorHex" value="#000000" maxlength="7">
+          <div class="color-picker-group">
+            <input type="color" id="colorPicker" value="#000000">
+            <input type="text" id="colorHex" value="#000000" maxlength="7">
+          </div>
         </div>
 
+        <!-- カラーサンプル -->
         <div class="color-samples">
-          <div class="color-samples">
-  <label>カラーサンプル：</label>
+          <div class="color-group">
+            <div class="color-group-title">代表色</div>
+            <div class="color-set">
+              <button style="background:#000000" title="黒"></button>
+              <button style="background:#ffffff" title="白"></button>
+              <button style="background:#ff0000" title="赤"></button>
+              <button style="background:#00ff00" title="緑"></button>
+              <button style="background:#0000ff" title="青"></button>
+            </div>
+          </div>
 
-  <div class="color-group">
-    <div class="color-group-title">代表色</div>
-    <div class="color-set">
-      <button style="background:#000000" title="黒"></button>
-      <button style="background:#ffffff" title="白"></button>
-      <button style="background:#ff0000" title="赤"></button>
-      <button style="background:#00ff00" title="緑"></button>
-      <button style="background:#0000ff" title="青"></button>
-    </div>
-  </div>
+          <div class="color-group">
+            <div class="color-group-title">ビジネスカラー</div>
+            <div class="color-set">
+              <button style="background:#007bff"></button>
+              <button style="background:#0056b3"></button>
+              <button style="background:#28a745"></button>
+              <button style="background:#6c757d"></button>
+              <button style="background:#343a40"></button>
+            </div>
+          </div>
 
-  <div class="color-group">
-    <div class="color-group-title">ビジネスカラー</div>
-    <div class="color-set">
-      <button style="background:#007bff" title="ビジネスブルー"></button>
-      <button style="background:#0056b3" title="深い青"></button>
-      <button style="background:#28a745" title="ビジネスグリーン"></button>
-      <button style="background:#6c757d" title="グレー"></button>
-      <button style="background:#343a40" title="ダークグレー"></button>
-    </div>
-  </div>
+          <div class="color-group">
+            <div class="color-group-title">ナチュラルカラー</div>
+            <div class="color-set">
+              <button style="background:#a3d9a5"></button>
+              <button style="background:#ffe4b5"></button>
+              <button style="background:#f4a460"></button>
+              <button style="background:#deb887"></button>
+              <button style="background:#c0c0c0"></button>
+            </div>
+          </div>
 
-  <div class="color-group">
-    <div class="color-group-title">ナチュラルカラー</div>
-    <div class="color-set">
-      <button style="background:#a3d9a5" title="葉っぱの緑"></button>
-      <button style="background:#ffe4b5" title="ベージュ"></button>
-      <button style="background:#f4a460" title="サンドブラウン"></button>
-      <button style="background:#deb887" title="ナチュラルウッド"></button>
-      <button style="background:#c0c0c0" title="シルバー"></button>
-    </div>
-  </div>
+          <div class="color-group">
+            <div class="color-group-title">SNSカラー</div>
+            <div class="color-set">
+              <button style="background:#1da1f2"></button>
+              <button style="background:#e1306c"></button>
+              <button style="background:#010101"></button>
+            </div>
+          </div>
+        </div>
 
-  <div class="color-group">
-    <div class="color-group-title">SNSカラー</div>
-    <div class="color-set">
-      <button style="background:#1da1f2" title="Twitterブルー"></button>
-      <button style="background:#e1306c" title="Instagramピンク"></button>
-      <button style="background:#010101" title="TikTokブラック"></button>
-    </div>
-  </div>
-</div>
-
+        <!-- ダウンロードボタン -->
         <div class="modal-buttons">
           <button id="downloadPngBtn">PNGで保存</button>
           <button id="downloadBtn">SVGで保存</button>
         </div>
-      </div>
-    </div>
 
-    <button id="modal-close" style="position: absolute; top: 10px; right: 10px;">閉じる</button>
-  </div>
-</div>
+      </div><!-- /.modal-controls -->
+    </div><!-- /.modal-content-flex -->
 
+  </div><!-- /.modal-inner -->
+</div><!-- /#modal -->
 
 
   <script src="materials.js"></script>
